RESOLVED FIXED70053
[Qt][WK2] WebErrorsQt.cpp duplicates code from WKError.h and WebError.h
https://bugs.webkit.org/show_bug.cgi?id=70053
Summary [Qt][WK2] WebErrorsQt.cpp duplicates code from WKError.h and WebError.h
Jesus Sanchez-Palencia
Reported 2011-10-13 14:04:05 PDT
We should use the shared error codes enum from Source/WebKit2/Shared/API/c/WKError.h instead of our custom "WebKitError*" codes to keep it aligned with all WebKit2 ports. We should also use WebError::webkitErrorDomain() instead of using a "WebKit" as the error domain for these errors.
Attachments
Patch (4.71 KB, patch)
2011-10-13 14:08 PDT, Jesus Sanchez-Palencia
no flags
Kenneth Rohde Christiansen
Comment 1 2011-10-13 14:06:15 PDT
Sounds good if this is possible
Jesus Sanchez-Palencia
Comment 2 2011-10-13 14:08:32 PDT
Jesus Sanchez-Palencia
Comment 3 2011-10-13 14:20:04 PDT
Comment on attachment 110904 [details] Patch Clearing flags on attachment: 110904 Committed r97399: <http://trac.webkit.org/changeset/97399>
Jesus Sanchez-Palencia
Comment 4 2011-10-13 14:20:11 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.