[Qt][WK2] WebErrorsQt.cpp duplicates code from WKError.h and WebError.h https://bugs.webkit.org/show_bug.cgi?id=70053

Reviewed by Kenneth Rohde Christiansen.

Now we will be aligned with WKError.h and WebError.h by using the shared
and pre-defined enum for error codes and WebError::webkitErrorDomain().

* WebProcess/WebCoreSupport/qt/WebErrorsQt.cpp:
(WebKit::blockedError):
(WebKit::cannotShowURLError):
(WebKit::interruptedForPolicyChangeError):
(WebKit::cannotShowMIMETypeError):
(WebKit::pluginWillHandleLoadError):

Canonical link: https://commits.webkit.org/86129@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@97399 268f45cc-cd09-0410-ab3c-d52691b4dbfc